Updated css to remove double-tap on iOS

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ p {
 }
 
 body {
+    touch-action: pan-x pan y;
     -webkit-transition: background-color .4s ease-out;
     -moz-transition: background-color .4s ease-out;
     -o-transition: background-color .4s ease-out;
